@@ -30,6 +30,7 @@ Revision history for DBIx::Class
     * Misc
         - Switch all serialization to use Storable::nfreeze for portable
           architecture independent ice
+        - Fix the bogus META.yml dependency injection issue for good
 
 0.08124 2010-10-28 14:23 (UTC)
     * New Features / Changes
